scss/partials/_menu.scss
/** TABLE OF CONTENTS
 — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — /
1 — Top Nav Wrapper
2 — Mobile Hamburger Menu
3 — Top Menu
4 — Nav bar wrapper
5 — Dropdown menus
/// END TABLE OF CONTENTS **/

/** 1 - Top Nav Wrapper
------------------------------------------------------------*/
.top-nav {
  position: absolute;
  top: 0;
  z-index: 10; // top nav needs to be above the hero image
  width: 100%;
  outline: none;
  height: 8rem;

  @include breakpoint(tablet) {
    height: 9rem;
  }

  @include breakpoint(desktop) {
    position: static;
    height: 10.4rem;
  }

  &__img {
    width: 18rem;

    @include breakpoint(desktop) {
      max-width: 18rem;
    }
  }

  &__logo {
    position: absolute;
    right: 2.6rem;
    z-index: 10;

    @include breakpoint(desktop) {
      position: relative;
      right: initial;
    }
  }
}

/** 2 - Mobile Hamburger Menu
------------------------------------------------------------*/
.menu-toggle {
  background: transparent;
  border: none;
  border-bottom: 0.2rem solid $primary-white;
  cursor: pointer;
  height: 2.5rem;
  left: 2.6rem;
  position: relative;
  transition: border-bottom 250ms ease;
  width: 3.5rem;
  z-index: 102;

  @include breakpoint(tablet) {
    //transform: translateY(50%);
  }

  @include breakpoint(desktop) {
    display: none;
  }

  &:active,
  &:focus {
    background: transparent;
    border: none;
    outline: none;
  }

  &::after,
  &::before {
    height: 0.2rem;
    width: 100%;
    left: 0;
    background: $primary-white;
    content: "";
    position: absolute;
    transition: transform 250ms ease, background 250ms ease;
  }

  &::before {
    top: 50%;
    transform: rotate(-180deg);
  }

  &::after {
    top: 0;
    transform: rotate(180deg);
  }

  &__a {
    background: none;
    height: 100%;
    left: 0;
    position: absolute;
    text-decoration: none;
    width: 100%;
  }

  a {
    &#close-menu {
      display: none;
    }

    &#open-menu {
      display: inline-block;
    }
  }
}

/** 3 - Top Menu
------------------------------------------------------------*/
.top-menu {
  align-items: center;
  display: flex;
  height: 100%;
  position: relative;
  width: 100%;
  background-color: $primary-blue;

  @include breakpoint(desktop) {
    display: grid;
    grid-auto-flow: column;
    grid-column-gap: 0;
    grid-template-columns: 18rem auto;
    height: 100%;
    padding: 0 3rem;
  }

  &__ul {
    font-weight: inherit;
    list-style-type: none;
    padding: 2.9rem;
  }

  &__li {
    display: block;
    padding-bottom: 1.5rem;
    margin-top: 0;

    @include breakpoint(desktop) {
      padding-bottom: 0.4rem;
    }

    &::before {
      content: "";
    }

    &--heading {
      border-bottom: 0.1rem solid $cool-neutral-4;
      padding-bottom: 1rem;
      margin-bottom: 3.5rem;

      @include breakpoint(desktop) {
        margin-bottom: 2.5rem;
      }
    }

    &--subheading {
      color: $secondary-green-1;
      margin-top: 2.8rem;
      padding-bottom: 1rem;
      line-height: normal;

      &:first-child {
        margin-top: 0;
      }
    }
  }

  &__anchor,
  &__button {
    text-decoration: none;
  }

  &__button {
    width: fit-content;
    margin-top: 2rem;

    @include breakpoint(desktop) {
      margin-left: auto;
      margin-top: auto;
      margin-bottom: auto;
      height: fit-content;
    }
  }

  &__label {
    // Styles for tertiary-info--large
    font-size: 1.6rem;
    line-height: 1.25;

    @include breakpoint(desktop) {
      // Styles for tertiary-info
      align-items: center;
      display: grid;
      font-size: 1.4rem;
      height: 100%;
      line-height: 1.286;
      padding: 0 1.774rem 0 0;
      position: relative;

      &::before {
        @include caret-sym(down, $secondary-green-1);
      }

      @at-root [open] #{&} {
        @include breakpoint(desktop) {
          background: linear-gradient(
            0deg,
            $primary-green 0%,
            $primary-green 6%,
            transparent 6%,
            transparent 100%
          );

          &::before {
            @include caret-sym(up, $primary-white);
          }
        }
      }
    }
  }

  &__menuitem {
    cursor: pointer;
    height: 100%;
    list-style: none;
    padding: 2.4rem 0;
    position: relative;

    &::before {
      @include arrow-sym(right, $secondary-green-1);
      right: 0;
    }

    @include breakpoint(desktop) {
      padding: 0 0 0 3rem;

      &::before {
        display: none;
      }
    }
  }

  &__divider {
    border-top: 0.1rem solid $cool-neutral-3;
    border-left: none;
    margin-top: 2rem;
    margin-bottom: 2rem;

    @include breakpoint(desktop) {
      border-top: none;
      border-left: 0.1rem solid $cool-neutral-2;
      margin-left: 3rem;
      margin-top: 4.3rem;
      margin-bottom: 2rem;
      height: 2rem;
    }
  }

  &__details {
    &[open] {
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 100;

      @include breakpoint(desktop) {
        position: relative;
      }

      .dropdown-menu {
        animation: sweep-right 0.5s ease-in-out;
      }

      .top-menu {
        &__menuitem {
          background-color: $secondary-blue-1;
          margin: 0.9rem auto 0 auto;
          padding: 2.5rem 0 2.5rem 6.3rem;
          width: 90%;

          &::before {
            @include arrow-sym (left, $primary-white);
            height: 2rem;
            left: 3rem;
            width: 2rem;
          }

          @include breakpoint(desktop) {
            background-color: transparent;
            margin: 0;
            padding: 0 0 0 3rem;
            width: 100%;

            &::before {
              content: none;
            }
          }
        }
      }
    }
  }
}

/** 4 - Nav bar wrapper
------------------------------------------------------------*/
.navbar {
  background: $primary-blue;
  display: flex;
  flex-flow: column nowrap;
  height: 100vh;
  list-style: none;
  position: absolute;
  left: 0;
  overflow: hidden;
  padding: 5rem 2rem 0 2rem;
  transform: translateY(-100%);
  transition: transform 0.2s ease;
  width: 100%;
  z-index: 100;
  
  @include breakpoint(tablet) {
    width: 50%;
  }

  @include breakpoint(desktop) {
    height: 100%;
    width: 100%;
    display: grid;
    grid-template-columns: auto 18rem;
    justify-items: center;
    grid-column-gap: 0;
    grid-auto-columns: max-content;
    position: relative;
    top: 0;
    transform: none;
    overflow: visible;
    padding: 0;

    .top-menu__nav-wrapper {
      display: grid;
      grid-template-columns: auto 3rem repeat(3, auto);
    }
  }

  &:target {
    transform: translateY(52%);

    @include breakpoint(tablet) {
      transform: translateY(52%);
    }
    /* 
        * Transform all the slices of hamburger
        * into a crossmark.
        */
    & ~ .menu-toggle {
      border-bottom: 0;

      &:after,
      &:before {
        height: 0.2rem;
        width: 100%;
        top: 50%;
        left: 0;
        background: $primary-white;
        transition: transform 250ms ease, background 250ms ease;
      }

      &:before {
        transform: rotate(45deg);
      }

      &:after {
        transform: rotate(-45deg);
      }

      &__a {
        position: absolute;
      }

      a {
        &#close-menu {
          display: inline-block;
        }

        &#open-menu {
          display: none;
        }
      }
    }
  }
}

/** 5 - Dropdown menus
------------------------------------------------------------*/
.dropdown-menu {
  z-index: 10;
  left: 0;
  width: 100%;
  height: 92vh;
  overflow: hidden;
  list-style: none;
  background: $primary-white;

  @include breakpoint(desktop) {
    transform: none;
    display: grid;
    position: absolute;
    height: auto;
    width: max-content;
    overflow: visible;
  }

  &--main {
    align-self: flex-start;
    width: 100%;

    @include breakpoint(desktop) {
      align-self: unset;
      grid-column-start: 1;
      grid-column-end: 4;
      width: 36rem;
    }
  }

  &--sub {
    align-self: flex-end;
    width: 100%;

    @include breakpoint(desktop) {
      align-self: unset;
      background-color: lighten($secondary-green-2, 20%);
      grid-column-start: 4;
      grid-column-end: 5;
      width: 26rem;
    }
  }

  &__button {
    @extend .tertiary-info--small;
    text-decoration: none;
    margin-top: 2rem;
    width: fit-content;
  }
}

